--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ name = "linkchecker"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 clap = { version = "4.3.12", features = ["derive", "cargo"] }
-reqwest = "0.11.18"
+reqwest = { version = "0.11", features = ["json"] }
+futures = "0.3"
+tokio = { version = "1.12.0", features = ["full"] }
+assert_cli = "0.6.3"
